# tarfs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml
cmd/: tarfs.go
internal/archive/: archive.go  compression.go  node.go
internal/fs/: fs.go
src/: archive.rs  cache.rs  filesystem.rs  fs.rs  magic.rs  main.rs  node.rs  tree.rs
src/tarfs/: fs.go  main.go  tar.go
